fix: add z-index to the navbar

--- a/client/src/components/views/Navbar/Navbar.css
+++ b/client/src/components/views/Navbar/Navbar.css
@@ -8,6 +8,7 @@
   position: sticky;
   top: 0;
   margin-bottom: 1rem;
+  z-index: 1;
 }
 
 .appLogo {
